# classicube-command-control-plugin

./: Cargo.toml  flake.nix
.github/workflows/: build.yml
src/: cli.rs  lib.rs  main.rs  messaging.rs  traits.rs
src/cli/: mod.rs
src/ipc/: mod.rs  tcp.rs  unix.rs
src/plugin/: commands.rs  mod.rs  server.rs
src/plugin/commands/: chunks.rs  init.rs  mod.rs  waiter.rs
