[package]
name = "classicube-command-control-plugin"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "cccc"
path = "src/main.rs"


[dependencies]
anyhow = "1.0.99"
bincode = "2.0.1"
byteorder = "1.5.0"
clap = { version = "4.5.46", features = ["derive"] }
classicube-helpers = { git = "https://github.com/SpiralP/rust-classicube-helpers.git" }
classicube-sys = "4"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
