[package]
name = "classicube-command-control-plugin"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "cccc"
path = "src/main.rs"


[dependencies]
anyhow = "=1.0.100"
bincode = { version = "=2.0.1", features = ["serde"] }
byteorder = "=1.5.0"
clap = { version = "=4.5.51", features = ["derive"] }
classicube-helpers = { git = "https://github.com/SpiralP/rust-classicube-helpers.git" }
classicube-sys = "=4.3.0+ClassiCube.1.3.7"
serde = { version = "=1.0.228", features = ["derive"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.20", features = ["env-filter"] }
