[package]
name = "classicube-command-control-plugin"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "cccc"
path = "src/main.rs"


[dependencies]
anyhow = "=1.0.102"
bincode = { version = "=3.0.0", features = ["serde"] }
byteorder = "=1.5.0"
clap = { version = "=4.5.61", features = ["derive"] }
classicube-helpers = { git = "https://github.com/SpiralP/rust-classicube-helpers.git" }
classicube-sys = "=5.0.0"
serde = { version = "=1.0.228", features = ["derive"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
